web-server: utils + gitignore + CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,17 @@
+cmake_minimum_required(VERSION 3.0)
 
+project(web-server)
+
+add_executable(${PROJECT_NAME}
+  web-server/server.c
+  web-server/socket.c)
+
+add_executable(echo-client
+  web-server/client.c
+  web-server/socket.c
+  web-server/utils.c)
+
+if(WIN32)
+  target_link_libraries(${PROJECT_NAME} ws2_32)
+  target_link_libraries(echo-client ws2_32)
+endif()
